# MRCore

./: .gitignore  CMakeLists.txt  README.md
cmake/: install_headers.cmake  update_headers.cmake
examples/: CMakeLists.txt
examples/sampling/: CMakeLists.txt  mainsampling.cpp
examples/simplest_planner/: CMakeLists.txt  main_planner.cpp
examples/test_glut_mrcore/: CMakeLists.txt  primerentornoglut.cpp
examples/test_planner/: CMakeLists.txt  maintest.cpp
examples/test_robot/: adeptonesim.cpp  adeptonesim.h  arm.cpp  puma560sim.h  robotsim.cpp  testPUMA.cpp  tool.cpp
examples/tests/: CMakeLists.txt  gluttestMHGtransformation.cpp  mainMHGtests.cpp  testlocalizer.cpp  worldTest.cpp
include/: mrbase.h  mrcore.h  mrdata.h  mrgl.h  mrgraphs.h  mrhw.h  mrmath.h  mrnavigation.h  mrnavigation2d.h  mrnet.h  mrpathplanner.h  mrpathplanning.h  mrsim.h  mrsimulation.h  mrsystem.h  mrworld.h
old_tests/test_robot/: CMakeLists.txt  arm.h  puma560sim.cpp  robotsim.h  testrobot.cpp  tool.h
src/base/: datalog.cpp  datalog.h  datasource.cpp  datasource.h  globject.h  init.cpp  init.h  logger.cpp  logger.h  object.cpp  object.h  serialize.h  stream.cpp  streamfile.h  streamstring.h  xml.cpp  xml.h  xmlaux.cpp  xmlaux.h  xmlfile.cpp  xmlfile.h
src/data/: data.cpp  data.h  image.cpp  image.h  laserdata.cpp  laserdata.h  laserdata3d.cpp  laserdata3d.h  odometry.cpp  odometry.h  pointcloud.cpp  pointcloud.h  wbodometry.cpp  wbodometry.h
src/gl/: font.h  glbasicFont.c  glscene.cpp  glscene.h  glscene2d.cpp  gltools.cpp  gltools.h
src/hw/: camera.h  kinect.h  lasersensor.h  lasersensor3d.h  pioneer3at.h  powercube70.h  quadrotor.h  voicetts.h  wheeledbase.h  wheeledmobilerobot.cpp  wheeledmobilerobot.h
src/hw/camera/: cameraclient.cpp  cameraclient.h  cameraserver.cpp  cameraserver.h
src/hw/kinect/: kinectclient.cpp  kinectclient.h  kinectserver.cpp  kinectserver.h
src/hw/lasersensor/: lasersensorclient.cpp  lasersensorclient.h  lasersensorfile.cpp  lasersensorfile.h  lasersensorserver.cpp  lasersensorserver.h
src/hw/lasersensor3d/: lasersensor3dclient.cpp  lasersensor3dclient.h  lasersensor3dfile.cpp  lasersensor3dfile.h  lasersensor3dserver.cpp  lasersensor3dserver.h
src/hw/lms200/: protlms.cpp  protlms.h
src/hw/powercube70/: powercube70hw.cpp  powercube70hw.h  powercubeaxis.cpp  powercubeaxis.h
src/hw/quadrotor/: quadrotorclient.cpp  quadrotorclient.h  quadrotorserver.cpp  quadrotorserver.h
src/hw/voicetts/: voicettsclient.h  voicettsserver.h
src/hw/wheeledbase/: wheeledbaseclient.h  wheeledbasefile.cpp  wheeledbasefile.h  wheeledbaseserver.cpp  wheeledbaseserver.h
src/math/: angle.h  boundingbox.cpp  boundingbox.h  face.cpp  face.h  interactions.cpp  interactions.h  matrix3x3.cpp  matrix3x3.h  mrmath.h  orientationmatrix.cpp  orientationmatrix.h  plane.cpp  plane.h  segment3d.cpp  segment3d.h  transformation2d.h  transformation3d.cpp  trianglemesh.cpp  trianglemesh.h  vector2d.cpp  vector2d.h  vector3d.cpp  vector3d.h
src/navigation/: occupancygridmap255.cpp  path2d.cpp
src/navigation2d/: grid.h  grid.hpp  labeledgridmap.cpp  path2d.cpp
src/net/: client.cpp  client.h  message.h  serialize.h
src/pathplanning/: genericplanner.h  genericsamplers.cpp  genericsamplers.h
src/sim/: actuator.cpp  composedentity.cpp  composedentity.h  cylindricalpart.h  entityset.cpp  entityset.h  facesetpart.cpp  facesetpart.h  joint.cpp  material.cpp  material.h  meshpart.cpp  meshpart.h  positionableentity.cpp  prismaticpart.cpp  prismaticpart.h  solidentity.cpp  solidentity.h  spherepart.cpp  spherepart.h  world.h
src/sim/manipulators/: adeptonesim.cpp  adeptonesim.h  aseairb2000sim.cpp  aseairb2000sim.h  euitibotsim.cpp  euitibotsim.h  puma560sim.cpp  puma560sim.h  robotsim.cpp  robotsim.h
src/sim/miscelaneous/: personsim.cpp  personsim.h  powercube70sim.cpp  powercube70sim.h  quadrotorsim.cpp  quadrotorsim.h  simulator.cpp  simulator.h  voicettssim.h  worldinfo.cpp  worldinfo.h
src/sim/rovers/: mobilerobot.h  nemolasersensor3dsim.cpp  nemolasersensor3dsim.h  patrolbotsim.cpp  pioneer3atsim.cpp  pioneer3atsim.h  wheeledbasesim.cpp  wheeledbasesim.h
src/sim/sensors/: camerasim.cpp  camerasim.h  kinectsim.cpp  kinectsim.h  landmark.cpp  landmark.h  lasersensor3dsim.cpp  lasersensor3dsim.h  lasersensorsim.cpp  lasersensorsim.h  lms100sim.cpp  lms200sim.cpp  ultrasonicsensor.cpp  ultrasonicsensor.h
src/simulation/: adeptonesim.h  aseairb2000sim.cpp  aseairb2000sim.h  camerasim.cpp  camerasim.h  euitibotsim.h  kinectsim.cpp  kinectsim.h  lasersensor3dsim.cpp  lasersensor3dsim.h  lasersensorsim.h  lms100sim.cpp  lms100sim.h  lms200sim.cpp  lms200sim.h  mobilerobot.cpp  nemolasersensor3dsim.cpp  nemolasersensor3dsim.h  patrolbotsim.cpp  patrolbotsim.h  personsim.cpp  personsim.h  pioneer3atsim.cpp  pioneer3atsim.h  powercube70sim.cpp  powercube70sim.h  puma560sim.cpp  puma560sim.h  quadrotorsim.cpp  quadrotorsim.h  wheeledbasesim.cpp  wheeledbasesim.h
src/system/: filesystem.cpp  filesystem.h  mutex.cpp  mutex.h  semaphore.cpp  semaphore.h  serialport.cpp  serialport.h  socket.cpp  socket.h  thread.hpp  time.cpp  time.h
src/world/: actuator.h  cylindricalpart.cpp  entityset.cpp  entityset.h  facesetpart.cpp  facesetpart.h  genericsensor.cpp  genericsensor.h  joint.h  meshpart.cpp  positionableentity.h  primitivesolidentity.h  prismaticpart.h  referencesystem.cpp  referencesystem.h  robotsim.cpp  robotsim.h  simplejoint.cpp  simplejoint.h  solidentity.cpp  solidentity.h  spherepart.cpp  tcp.cpp  tcp.h  timesim.h  world.cpp  world.h
