
cmake_minimum_required(VERSION 2.8)

########### Find MRCore
IF (WIN32)
	SET(CMAKE_INSTALL_PREFIX "C:/mrcore" CACHE PATH "FOO install prefix" FORCE)
ELSE(WIN32)
	SET(CMAKE_INSTALL_PREFIX /usr/local/mrcore) 
ENDIF(WIN32)
MESSAGE(STATUS "Default install directory is: " ${CMAKE_INSTALL_PREFIX}) 

find_path(	MRCORE_DIR include/mrcore.h  ${CMAKE_INSTALL_PREFIX} )

INCLUDE_DIRECTORIES(${MRCORE_DIR}/include)
MESSAGE (STATUS "MRCore include folder is " ${MRCORE_DIR}/include)
LINK_DIRECTORIES(${MRCORE_DIR}/lib)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/external)
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/external)

FILE(GLOB children RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/* )
FOREACH(child ${children})
	IF(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${child} AND NOT ${child} MATCHES "external")
	MESSAGE("CREATING EXAMPLE: ${child}")
	ADD_SUBDIRECTORY(${child})
	ENDIF()
ENDFOREACH()








