
cmake_minimum_required(VERSION 2.8)
SET(EXAMPLE_BIN_DIR "${CMAKE_CURRENT_BINARY_DIR}/bin")
#adds per target properties for examples
macro(MR_GLUT_EXAMPLE exampletarget)



 IF(WIN32)
	SET(GLUT_FOUND 1)
	#SET(GLUT_LIBRARIES glut32)
	SET(OPENGL_LIBRARIES opengl32 glu32 )
	IF(DEBUG)
		TARGET_LINK_LIBRARIES(${exampletarget} mrcore_d  ${GLUT_LIBRARIES})
	ELSE(DEBUG)
		TARGET_LINK_LIBRARIES(${exampletarget} mrcore  ${GLUT_LIBRARIES})
	ENDIF(DEBUG)
ELSE(WIN32) #LINUX
	find_package(OpenGL REQUIRED COMPONENTS OpenGL)
        find_package(GLUT REQUIRED)
	if(OPENGL_GLU_FOUND)
 		message("GLU:  FOUND !!!")
	endif() 
	TARGET_LINK_LIBRARIES(${exampletarget}  ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} mrcore)
ENDIF(WIN32)
set_target_properties( ${exampletarget} 
    PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${EXAMPLE_BIN_DIR}/TMP"
    LIBRARY_OUTPUT_DIRECTORY_DEBUG "${EXAMPLE_BIN_DIR}/LIB"
    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${EXAMPLE_BIN_DIR}"
	ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${EXAMPLE_BIN_DIR}/TMP"
    LIBRARY_OUTPUT_DIRECTORY_RELEASE "${EXAMPLE_BIN_DIR}/LIB"
    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${EXAMPLE_BIN_DIR}"
)
endmacro()
#For targets of only one src
macro(MR_SIMPLE_GLUT_EXAMPLE cppfile)
  ADD_EXECUTABLE(${cppfile} ${cppfile}.cpp)
  MR_GLUT_EXAMPLE(${cppfile})
endmacro()

########### Find MRCore
IF (WIN32)
	SET(CMAKE_INSTALL_PREFIX "C:/mrcore" CACHE PATH "FOO install prefix" FORCE)
ELSE(WIN32)
	SET(CMAKE_INSTALL_PREFIX /usr/local/mrcore) 
ENDIF(WIN32)
MESSAGE(STATUS "Default install directory is: " ${CMAKE_INSTALL_PREFIX}) 

find_path(	MRCORE_DIR include/mrcore.h  ${CMAKE_INSTALL_PREFIX} )

INCLUDE_DIRECTORIES(${MRCORE_DIR}/include)
MESSAGE (STATUS "MRCore include folder is " ${MRCORE_DIR}/include)
LINK_DIRECTORIES(${MRCORE_DIR}/lib)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/external)
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/external)

FILE(GLOB children RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/* )
FOREACH(child ${children})
	IF(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${child} AND NOT ${child} MATCHES "external")
	MESSAGE("CREATING EXAMPLE: ${child}")
	ADD_SUBDIRECTORY(${child})
	ENDIF()
ENDFOREACH()
IF (WIN32)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/external/freeglut.dll DESTINATION ${EXAMPLE_BIN_DIR})
MESSAGE(STATUS "Copying:${CMAKE_CURRENT_SOURCE_DIR}/external/freeglut.dll to ${EXAMPLE_BIN_DIR}")
ENDIF(WIN32)





